solc_mutator_ossfuzz_seed_corpus/test_sol/test_a7abce2e255b9d982df122bce69b885783bc54621cac907380bb2bf63bd67ec4_d8ebc0e475a898e8f1704591015218d28e54deae_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
contract C0 {
  error er0(int216 ep0, bool ep1);
  receive() external   payable
  {
    return;
  }
  string[]  public s0;
  constructor(string[] memory i0)   {
    s0 = i0;
    {
      if (true)
      {
      }
      else if (false)
      {
        {
          s0.pop();
          i0[1] = (i0[0] = "ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff");
        }
        s0.pop();
      }
    }
  }
  modifier m0() 
  {
    _;
  }
  enum EN0 {
    M0, M1, M2, M3, M4, M5, M6, M7,
    M8, M9, M10, M11, M12, M13, M14, M15,
    M16, M17, M18, M19, M20, M21, M22, M23,
    M24, M25, M26, M27, M28, M29, M30, M31,
    M32, M33, M34, M35, M36, M37, M38, M39,
    M40, M41, M42, M43, M44, M45, M46, M47

  }
  struct St0 {
    bool el0;
    mapping(bytes28 => uint168) el1;
  }
}
bool constant cons0 = (true || (false || ((true && false) && true)));
library L0 {
  modifier m1() 
  {
    if ((bytes14(0x0000000000000000000000000000) != bytes14(0xffffffffffffffffffffffffffff)))
    {
      unchecked {
      }
      do
      {
        _;
      }
      while (((((int200((int200(-216392623880165215424573373536023916747158376645710822580817) / int200(0))) * int200(0)) ** uint128(uint128(0))) + int200(803469022129495137770981046170581301261101496891396417650687)) > int200(-596757231398575334163773656952939854023672910088900011397429)));
    }
    assembly
    {
      mstore8(mod(cons0, 2048), cons0)
    }
  }
  function f1() internal   
  {
  }
}
// ----
// TypeError 7615: (su0.sol:1443-1448): Only direct number constants and references to such constants are supported by inline assembly.
// TypeError 7615: (su0.sol:1429-1434): Only direct number constants and references to such constants are supported by inline assembly.
